@@ -1,0 +1,15 @@
+#compdef eix-remote
+_arguments -s -S -A '-*' : \
+'(-h -H -\?)'{-h,-H,'-\?'}'[help]' \
+'(2)-f+[use FILE as last arg]:file:_files' \
+'-u+[call wget as USER if you are not root]:wget_user:(nobody portage)' \
+'-U+[call wget as USER if you are root]:wget_user:(nobody portage)' \
+'-s[call sudo to change user permission]' \
+'-S[call su to change user permission]' \
+'-l[use PATH as LOCAL_LAYMAN]:local_layman:_files -/' \
+'-a[use ADDR as remote database address]:remote_addr:( )' \
+'-i[ignore all previous options]' \
+'-v[verbose (default)]' \
+'-q[quiet]' \
+'1:command:(update fetch add remove)' \
+'2::file:_files'
