@@ -3,6 +3,8 @@
 *eix-0.22.6
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Use largefile support if available
+	- Add some experimental zsh-completion
+	- eix-sync: New option -V, cancel -m, fix description of -u
 
 *eix-0.22.5
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
